# mandelbrot-generator-haskell

./: MandelbrotGenerator.cabal  README.md
src/: CNumbers.hs  Julia.hs  Main.hs  Mandelbrot.hs
